# pkgsync

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
src/: Makefile.am  main.c
